--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node dist/index.js",
     "build": "tsc -b .",
     "dev": "tsc-watch --outDir ./dist --onSuccess \"node --inspect=0.0.0.0:9229 ./dist/index\"",
-    "lint": "tslint --project ."
+    "lint": "tslint --project .",
+    "typeorm": "node ./node_modules/typeorm/cli.js"
   },
   "keywords": [
     "Finance",
@@ -19,7 +20,10 @@
   "dependencies": {
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "mysql2": "^2.2.5",
+    "reflect-metadata": "^0.1.13",
     "tsc-watch": "^4.2.3",
+    "typeorm": "^0.2.30",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
