--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "FWE",
   "license": "MIT",
   "dependencies": {
+    "class-validator": "^0.13.1",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
