--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
+    "start": "tsc-watch --outDir ./dist --onSuccess 'node --inspect=0.0.0.0:9229 ./dist/index'",
     "build": "tsc -b .",
-    "dev": "tsc-watch --outDir ./dist --onSuccess \"node --inspect=0.0.0.0:9229 ./dist/index\"",
     "lint": "tslint --project .",
     "typeorm": "node ./node_modules/typeorm/cli.js"
   },
