--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-validator": "^0.13.1",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "tsc-watch": "^4.2.3",
