--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/jsonwebtoken": "^8.5.0",
+    "bcrypt": "^5.0.0",
     "class-validator": "^0.13.1",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
@@ -30,6 +31,7 @@
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.6",
     "@types/node": "^13.13.4",
     "prettier": "^2.0.5",
