--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,6 @@ services:
     ports:
       - 4000:4000
       - 9229:9229
-    command: bash -c "npm start"
+    command: npm run dev
     volumes:
       - ./:/var/app/backend
