--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "An application to track finances",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose --coverage --forceExit --runInBand",
+    "test:watch": "jest --watchAll --verbose --runInBand",
+    "test:ci": "jest --verbose --coverage --ci --forceExit --detectOpenHandles --runInBand",
     "start": "node dist/index.js",
     "build": "tsc -b .",
-    "dev": "tsc-watch --outDir ./dist --onSuccess \"node --inspect=0.0.0.0:9229 ./dist/index\"",
+    "dev": "tsc-watch --outDir ./dist --onSuccess \"node --inspect=0.0.0.0:9229 ./dist/src/index\"",
     "lint": "tslint --project .",
     "typeorm": "node ./node_modules/typeorm/cli.js"
   },
@@ -23,18 +25,24 @@
     "class-validator": "^0.13.1",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
+    "ts-jest": "^26.5.1",
     "tsc-watch": "^4.2.3",
     "typeorm": "^0.2.30",
+    "typeorm-fixtures-cli": "^1.9.1",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.6",
+    "@types/jest": "^26.0.20",
     "@types/node": "^13.13.4",
+    "@types/supertest": "^2.0.10",
     "prettier": "^2.0.5",
+    "supertest": "^6.1.3",
     "tslint": "^6.1.2",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
