--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "tsc -b .",
     "dev": "tsc-watch --outDir ./dist --onSuccess \"node --inspect=0.0.0.0:9229 ./dist/src/index\"",
     "lint": "tslint --project .",
-    "typeorm": "node ./node_modules/typeorm/cli.js"
+    "typeorm": "node ./node_modules/typeorm/cli.js",
+    "fixtures": "npx fixtures ./src/fixture --config ormconfig.js"
   },
   "keywords": [
     "Finance",
