--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "license": "MIT",
   "dependencies": {
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.5",
     "bcrypt": "^5.0.0",
     "class-validator": "^0.13.1",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "ts-jest": "^26.5.1",
