--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "tsc-watch --outDir ./dist --onSuccess \"node --inspect=0.0.0.0:9229 ./dist/src/index\"",
     "lint": "tslint --project .",
     "typeorm": "node ./node_modules/typeorm/cli.js",
-    "fixtures": "npx fixtures ./src/fixture --config ormconfig.js"
+    "seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config ",
+    "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed"
   },
   "keywords": [
     "Finance",
@@ -27,6 +28,7 @@
     "class-validator": "^0.13.1",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
+    "faker": "^5.4.0",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
@@ -36,11 +38,13 @@
     "tsc-watch": "^4.2.3",
     "typeorm": "^0.2.30",
     "typeorm-fixtures-cli": "^1.9.1",
+    "typeorm-seeding": "^1.6.1",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.6",
+    "@types/faker": "^5.1.6",
     "@types/jest": "^26.0.20",
     "@types/node": "^13.13.4",
     "@types/supertest": "^2.0.10",
