--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "faker": "^5.4.0",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
