--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest --verbose --coverage --forceExit --runInBand",
     "test:watch": "jest --watchAll --verbose --runInBand",
     "test:ci": "jest --verbose --coverage --ci --forceExit --detectOpenHandles --runInBand",
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
     "build": "tsc -b .",
     "dev": "tsc-watch --outDir ./dist --onSuccess \"node --inspect=0.0.0.0:9229 ./dist/src/index\"",
     "lint": "tslint --project .",
