--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "tslint --project .",
     "typeorm": "node ./node_modules/typeorm/cli.js",
     "seed:config": "ts-node ./node_modules/typeorm-seeding/dist/cli.js config ",
-    "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed"
+    "seed:run": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed",
+    "heroku-postbuild": "tsc -b . && npm run typeorm schema:drop && npm run typeorm schema:sync && npm run seed:run"
   },
   "keywords": [
     "Finance",
@@ -56,5 +57,6 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-etc": "^1.10.1",
     "tslint-plugin-prettier": "^2.3.0"
-  }
+  },
+  "heroku-run-build-script": true
 }
