--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "ts-jest": "^26.5.1",
+    "ts-node": "^9.1.1",
     "tsc-watch": "^4.2.3",
     "typeorm": "^0.2.30",
     "typeorm-fixtures-cli": "^1.9.1",
