fix(ci): added test stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,17 +4,21 @@ before_script:
     - apt-get update -qy
     - apt-get install -y ruby-dev
     - gem install dpl
-    - npm ci
 
 stages:
-    - tests
+    - test
     - production
 
-tests:
-    - npm run build && npm run test
+test:
+  stage: test
+  before_script:
+    - npm ci
+  script:
+    - npm run test:ci
 
 production:
     type: deploy
+    stage: production
     image: ruby:latest
     script:
         - dpl --provider=heroku --app=$HEROKU_APP --api-key=$HEROKU_API_KEY
