--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     command: >
       sh -c "npm i bcrypt &&
              npm i @types/bcrypt &&
+             npm run heroku-postbuild &&
              npm run dev"
     volumes:
       - ./:/var/app/backend
